git product debug fresh